wp-content/themes/ovr2016/includes/css/master.css
/* This is a small security for too long strings titles */
body {
	background-image: url('https://firebasestorage.googleapis.com/v0/b/ovrride-2adb5.appspot.com/o/Background%2Fbkg-snow.jpg?alt=media&token=bcb8179d-9a94-4de1-a03f-210fb9379518');
	word-wrap: break-word;
}

/* Alignment */
.alignleft {
	display: inline;
	float: left;
	clear: left;
	margin-right: 1.5em;
}
.alignright {
	display: inline;
	float: right;
	clear: right;
	margin-left: 1.5em;
}
.aligncenter {
	clear: both;
	float: none;
	display: block;
	margin: 0 auto;
}


/* Images and wp-captions should always fit and be responsive */
img {
	display: inline-block;
	height: auto;
	max-width: 100%;
}
img[class*="wp-image-"] {
	margin-top: 10px;
	margin-bottom: 10px;
}
.wp-caption {
	border: 1px solid #ccc;
	margin-bottom: 10px;
	max-width: 100%;
	border-radius: 4px;
	padding: 0 10px;
}
.wp-caption.aligncenter {
	margin-bottom: 10px;
}
.wp-caption img[class*="wp-image-"] {
	display: block;
}
.wp-caption .wp-caption-text {
	text-align: center;
	margin-top: 10px;
}

/* WP Gallery */
.gallery {
	margin-bottom: 1.5em;
}
.gallery a img {
	border: none;
	height: auto;
	max-width: 90%;
}
.gallery dd {
	margin: 0;
}
.gallery-caption {
	display: block;
}

/* Make sure embeds and iframes fit their containers */
embed,
iframe,
object {
	max-width: 100%;
}


/* Text meant only for screen readers */
.screen-reader-text {
	clip: rect(1px, 1px, 1px, 1px);
	position: absolute !important;
}
.screen-reader-text:hover,
.screen-reader-text:active,
.screen-reader-text:focus {
	background-color: #f1f1f1;
	border-radius: 3px;
	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
	clip: auto !important;
	color: #21759b;
	display: block;
	font-size: 14px;
	font-weight: bold;
	height: auto;
	left: 5px;
	line-height: normal;
	padding: 15px 23px 14px;
	text-decoration: none;
	top: 5px;
	width: auto;
	z-index: 100000; /* Above WP toolbar */
}


/* Content */
.main-content-inner {
	padding-bottom: 1.5em;
}
.hentry {
	margin: 0 0 1.5em;
}
.sticky {
	display: block;
}
.bypostauthor {
	display: block;
}


/* Clearing */
.clear {
	clear: both;
}

/* Navigation */

.dropdown-submenu{position:relative;}
.dropdown-submenu>.dropdown-menu{top:0;left:100%;-webkit-border-radius:0 6px 6px 6px;-moz-border-radius:0 6px 6px 6px;border-radius:0 6px 6px 6px;}
.dropdown-submenu:active>.dropdown-menu, .dropdown-submenu:hover>.dropdown-menu {
display: block;
}
.dropdown-submenu>a:after{display:block;content:" ";float:right;width:0;height:0;border-color:transparent;border-style:solid;border-width:5px 0 5px 5px;border-left-color:#cccccc;margin-top:5px;margin-right:-10px;}
.dropdown-submenu:active>a:after{border-left-color:#ffffff;}
.dropdown-submenu.pull-left{float:none;}.dropdown-submenu.pull-left>.dropdown-menu{left:-100%;margin-left:10px;-webkit-border-radius:6px 0 6px 6px;-moz-border-radius:6px 0 6px 6px;border-radius:6px 0 6px 6px;}


/* Here some needed widget styles
 * Most widgets are adapted in the file bootstrap-wp.js - and REALLY easy to modify! ;) */
.widget { margin-bottom: 2em; }
.widget_nav_menu ul.sub-menu li, .widget_pages ul.children li { padding-left: 15px; }

/* Hiding the search widget's button in widgets. thats just too old-skool. :) but if you want it back, just delete the next line.
 * Note: you can change the whole appearance of the search_form() function in our searchform.php */
.widget_search .search-form input[type="submit"] { display: none; }

/* Make sure select elements fit in widgets */
.widget select {
	max-width: 100%;
}

/* Nested comments? They are threaded and nested already, you just need to add your own styling to finalize!
 * For example with some margin, like the line below ;) Delete, modify, change classes in HTML if you desire another style */
 .comment .children { margin-left: 1.5em; }

/**
* Some WP Theme Repository requirements
*/

.sticky {
}

.gallery-caption {

}

.bypostauthor {

}

.entry-meta {
	clear: both;
}

/*
 == Quick CSS styling tips ==

 You can start off in a rough direction with some minimal styles.
 See below for some tips. ;)


 == Want to have the whole site wrapped? ==

 Just fill the .container class with some background color to have a the whole site "wrapped".
 This works so easy because every main part is wrapped only once into a container class by bootstrap.
 Try out by decommenting the next line and go from there.

 .container { background: #f9f9f9; border-right: 1px solid #eee; border-left: 1px solid #eee; }


 == Want to wrap just the content and sidebar in Bootstrap style? ==

 That one is a great example to show that some things are much cleaner and easier to do via just adding some HTML classes.
 In this case, we will add just one CSS class "panel", look for example at the beginning in content.php!


 == Infinite Scrolling by Jetpack ==
 You can enable this cool feature by simply decommenting the lines below and make sure you use the same classes on the right place in your html..

/* Globally hidden elements when Infinite Scroll is supported and in use.
 * Older / Newer Posts Navigation (the pagination, must always be hidden), Theme Footer only when set to scrolling.. */

/*
.infinite-scroll .page-links,
.infinite-scroll.neverending .site-footer {
	display: none;
}
*/

/* When Infinite Scroll has reached its end we need to re-display elements that were hidden (via .neverending) before */

/*
.infinity-end.neverending .site-footer {
	display: block;
}
*/

/* Hey, if you don't need my comments anymore, just delete me! :)  */


/* styles for _tk_pagination und _tk_link_pages */
nav form.tk-page-nav,
nav .input-group,
nav .input-group-btn,
nav .form-control {
    display: inline;
}
/* Full bleed fluid container */
.container-fluid {
	padding-right: 0;
	padding-left: 0;
}
/* Navbar height adjustment */
.navbar {
	min-height: 60px;
	margin-bottom: 0;
	border-radius: 0;
}
.navbar-brand {
	height: inherit;
}
.navbar-nav li a {
 line-height: 80px;
}
/* Larger nav font */
.navbar-nav > li {
  font-size: 20px;
  }
/* ... */

